--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -17,7 +17,7 @@
     },
     "VirusHackKodShredinger": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "http://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
