--- a/VirusHackKodShredinger.csproj
+++ b/VirusHackKodShredinger.csproj
@@ -10,6 +10,13 @@
     <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.3.0.20200421" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\img\cil_clipboard.png">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 
 
 </Project>
