--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DBServer": "localhost\\SqlExpress",
+  "DbDatabase": "VirusHack"
 }
