--- a/VirusHackKodShredinger.csproj
+++ b/VirusHackKodShredinger.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
     <PackageReference Include="OpenCvSharp4" Version="4.3.0.20200421" />
     <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.3.0.20200421" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.4.1" />
   </ItemGroup>
 
   <ItemGroup>
